@@ -111,7 +111,7 @@ class Stopwords extends FieldsProcessorPluginBase {
    * {@inheritdoc}
    */
   protected function testType($type) {
-    return Utility::isTextType($type);
+    return $this->getDataTypeHelper()->isTextType($type);
   }
 
   /**
